--- a/src/1.Domain/Domain/Domain.csproj
+++ b/src/1.Domain/Domain/Domain.csproj
@@ -10,7 +10,7 @@
         <Folder Include="Entities\Message\" />
         <Folder Include="Entities\Invoice\" />
         <Folder Include="Entities\ESignature\" />
-        <Folder Include="Entities\GC\" />
         <Folder Include="Entities\Payment\" />
+        <Folder Include="GCEntities\" />
     </ItemGroup>
 </Project>
