--- a/src/4.API/API/appsettings.json
+++ b/src/4.API/API/appsettings.json
@@ -1,9 +1,33 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "AllowedHosts": "*",
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.Console" ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      }
+      //{
+      //  "Name": "File",
+      //  "Args": {
+      //    "path": "logs/log.txt",
+      //    "rollingInterval": "Day"
+      //  }
+      //}
+    ],
+    "Enrich": [ "FromLogContext", "WithThreadId", "WithMachineName" ]
   },
-  "AllowedHosts": "*"
+  "SupportedCultures": [
+    "en",
+    "vi"
+  ],
+  "ConnectionStrings": {
+    "Postgre": "Host=localhost;Port=5432;Database=phenikaa_agent;Username=root;Password=root"
+  }
 }
