add gc uow + dapper

--- a/src/4.API/API/API.csproj
+++ b/src/4.API/API/API.csproj
@@ -21,5 +21,6 @@
     <ItemGroup>
       <ProjectReference Include="..\..\2.Application\Application\Application.csproj" />
       <ProjectReference Include="..\..\3.Infrastructure\Infrastructure.DBAgent.Postgre\Infrastructure.DBAgent.Postgre.csproj" />
+      <ProjectReference Include="..\..\3.Infrastructure\Infrastructure.DBGC.SqlServer\Infrastructure.DBGC.SqlServer.csproj" />
     </ItemGroup>
 </Project>
