--- a/src/3.Infrastructure/Infrastructure.DBAgent.Postgre/Infrastructure.DBAgent.Postgre.csproj
+++ b/src/3.Infrastructure/Infrastructure.DBAgent.Postgre/Infrastructure.DBAgent.Postgre.csproj
@@ -8,6 +8,7 @@
     <ItemGroup>
       <PackageReference Include="AutoMapper" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\..\2.Application\Application\Application.csproj" />
