--- a/src/3.Infrastructure/Infrastructure.DBGC.SqlServer/Infrastructure.DBGC.SqlServer.csproj
+++ b/src/3.Infrastructure/Infrastructure.DBGC.SqlServer/Infrastructure.DBGC.SqlServer.csproj
@@ -5,4 +5,14 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" />
+      <PackageReference Include="Dapper" />
+      <PackageReference Include="Microsoft.Data.SqlClient" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\..\1.Domain\Domain\Domain.csproj" />
+      <ProjectReference Include="..\..\2.Application\Application\Application.csproj" />
+    </ItemGroup>
 </Project>
