--- a/src/4.API/API/appsettings.json
+++ b/src/4.API/API/appsettings.json
@@ -28,6 +28,7 @@
     "vi"
   ],
   "ConnectionStrings": {
-    "Postgre": "Host=localhost;Port=5432;Database=PHENIKAA_AGENT;Username=root;Password=root"
+    "Postgre": "Host=localhost;Port=5432;Database=PHENIKAA_AGENT;Username=root;Password=root",
+    "SqlServer": "Server =localhost,1433; Initial Catalog =admindb; User ID = sa; password =Password@123 ; encrypt = true; trustservercertificate = true; MultipleActiveResultSets = true"
   }
 }
