update message api

--- a/src/1.Domain/Domain/Domain.csproj
+++ b/src/1.Domain/Domain/Domain.csproj
@@ -6,10 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
-        <Folder Include="Entities\Message\" />
+        <Folder Include="Constants\" />
         <Folder Include="Entities\Invoice\" />
         <Folder Include="Entities\ESignature\" />
         <Folder Include="Entities\Payment\" />
-        <Folder Include="GCEntities\" />
     </ItemGroup>
 </Project>
