--- a/src/4.API/API/appsettings.json
+++ b/src/4.API/API/appsettings.json
@@ -29,6 +29,6 @@
   ],
   "ConnectionStrings": {
     "Postgre": "Host=localhost;Port=5432;Database=PHENIKAA_AGENT;Username=root;Password=root",
-    "SqlServer": "Server =localhost,1433; Initial Catalog =admindb; User ID = sa; password =Password@123 ; encrypt = true; trustservercertificate = true; MultipleActiveResultSets = true"
+    "SqlServer": "Server =localhost,1433; Initial Catalog =GCDB; User ID = sa; password =Password@123 ; encrypt = true; trustservercertificate = true; MultipleActiveResultSets = true"
   }
 }
