--- a/src/2.Application/Application/Application.csproj
+++ b/src/2.Application/Application/Application.csproj
@@ -7,13 +7,12 @@
     </PropertyGroup>
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\..\1.Domain\Domain\Domain.csproj" />
     </ItemGroup>
     <ItemGroup>
-      <Folder Include="DTOs\Responses\" />
-      <Folder Include="DTOs\Requests\" />
       <Folder Include="Mapper\" />
     </ItemGroup>
 </Project>
